# session-management-app

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/ctx-cli/: Cargo.toml
crates/ctx-cli/tests/: claude_command_launch.rs  codex_command_launch.rs
crates/ctx-core/: Cargo.toml
crates/ctx-core/src/: classification.rs  injection.rs  lib.rs  models.rs  presets.rs  session_logs.rs  settings.rs  sqlite_index.rs  vault.rs  watch.rs  work_context.rs
scripts/: verify-frontend.mjs  verify-rust.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: build-sidecar.sh
src-tauri/src/: lib.rs  main.rs
src/components/: ContextList.tsx  CreateContextForm.tsx  Header.tsx  PresetPanel.tsx  Sidebar.tsx
src/data/: mockData.ts  sessionHandoffContexts.ts
