[workspace]
members = [
    "crates/ctx-core",
    "crates/ctx-cli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CTX Contributors"]

[workspace.dependencies]
ctx-core = { path = "crates/ctx-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
libc = "0.2"
