[package]
name = "ctx-desktop"
version.workspace = true
description = "Desktop and CLI scaffold for managing AI agent context vaults."
authors.workspace = true
edition.workspace = true
default-run = "ctx-desktop"

[lib]
name = "ctx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ctx-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
ctx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.0", features = [] }
uuid.workspace = true
