[package]
name = "ctx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared core logic for CTX vaults, presets, classification, and CLI injection."

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
